--- a/.gitignore
+++ b/.gitignore
@@ -6,37 +6,31 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 
-# Dependencies
-node_modules
-.npm
-.yarn
+# Dependency directories
+node_modules/
+.npm/
+.yarn/
 
-# Build
-dist
-dist-ssr
+# Build output
+dist/
+dist-ssr/
 *.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
 
 # Environment variables
 .env
 .env.*
 !.env.example
 
-# OS
+# OS-specific files
 .DS_Store
 Thumbs.db
 
-node_modules
-dist
-.env
-.DS_Store
-.DS_Store
+# Editor-specific settings
+.vscode/
+!.vscode/extensions.json
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
